--- a/[4강-2]얼굴 검출/DNN-FACE.ipynb
+++ b/[4강-2]얼굴 검출/DNN-FACE.ipynb
@@ -10,18 +10,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "import cv2\n",
     "\n",
-    "model = 'res10_300x300_ssd_iter_140000_fp16.caffemodel'\n",
-    "config = 'deploy.prototxt'\n",
-    "#model = 'opencv_face_detector_uint8.pb'\n",
-    "#config = 'opencv_face_detector.pbtxt'\n",
+    "#model = 'res10_300x300_ssd_iter_140000_fp16.caffemodel'\n",
+    "#config = 'deploy.prototxt'\n",
     "\n",
-    "cap = cv2.VideoCapture(0)\n",
+    "model = 'opencv_face_detector_uint8.pb'\n",
+    "config = 'opencv_face_detector.pbtxt'\n",
+    "\n",
+    "cap = cv2.VideoCapture('IU-gif.gif')\n",
     "\n",
     "if not cap.isOpened():\n",
     "    print('Camera open failed!')\n",
@@ -59,11 +60,11 @@
     "        cv2.rectangle(frame, (x1, y1), (x2, y2), (0, 255, 0))\n",
     "\n",
     "        label = 'Face: %4.3f' % confidence\n",
-    "        cv2.putText(frame, label, (x1, y1 - 1), cv2.FONT_HERSHEY_SIMPLEX, 0.8, (0, 255, 0), 1, cv2.LINE_AA)\n",
+    "        cv2.putText(frame, label, (x1, y1 - 1), cv2.FONT_HERSHEY_SIMPLEX, 0.5, (0, 255, 0), 1, cv2.LINE_AA)\n",
     "\n",
     "    cv2.imshow('frame', frame)\n",
     "\n",
-    "    if cv2.waitKey(1) == 27:\n",
+    "    if cv2.waitKey(30) == 27:\n",
     "        break\n",
     "    \n",
     "cap.release()\n",
